# metagenome_vector_sketches

./: CMakeLists.txt  Makefile  README.md  compute_error_of_random_projections.py  jaccard.cpp  jaccard.py  pairwise_comp_optimized.cpp  query_ava_matrix.cpp
include/: read_pc_mat.h
src/: bindings.cpp  pairwise_comp_optimized.cpp  query_ava_matrix.cpp  query_pc_mat.cpp  read_pc_mat.cpp  read_pc_mat.py  read_pc_mat_cmp.cpp
